# JudgeServer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  judge_languages.h  judge_option.cpp  judge_option.h  judge_runner.cpp  judge_runner.h  judge_server.cpp
deploy/: java_policy  judge.conf
utils/: PropertiesReader.cpp  PropertiesReader.h  RedisConnector.cpp  RedisConnector.h  compare.cpp  compare.h
